--- a/Styles.css
+++ b/Styles.css
@@ -7,8 +7,8 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #0e0e10;
-    color: #fff;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
 }
 
 header {
@@ -82,10 +82,48 @@ nav ul li a:hover, nav ul li a:focus {
     background-color: #1f2326;
     margin: 20px;
     padding: 20px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+    transition: box-shadow 0.3s, transform 0.3s; /* Añadido transform para suavizar el efecto */
+    color: #fff; /* Cambio del color del texto a blanco */
+}
+
+.news-item::before,
+.news-item::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(255, 70, 85, 0.5);
+    width: 50%;
+    transition: all 0.3s ease;
+}
+
+.news-item::before {
+    left: -50%;
+}
+
+.news-item::after {
+    right: -50%;
+}
+
+.news-item:hover::before {
+    left: 100%;
+}
+
+.news-item:hover::after {
+    right: 100%;
+}
+
+.news-item:hover {
+    box-shadow: 0 0 20px rgba(255, 70, 85, 0.5);
+    background-color: #ff4655;
+    transform: scale(1.03); /* Aumenta ligeramente el tamaño al hacer hover */
 }
 
 .news-item h3 {
-    color: #ff4654;
+    color: #ffffff;
 }
 
 footer {
@@ -117,10 +155,8 @@ footer {
     display: block;
     text-decoration: none;
     color: inherit; /* Mantiene el color del texto igual al del resto del documento */
-    border: 1px solid #ccc; /* Borde ligero para el recuadro */
     padding: 10px;
     margin-bottom: 10px; /* Espaciado entre noticias */
-    background-color: #f9f9f9; /* Fondo más claro para mayor visibilidad */
     transition: background-color 0.3s; /* Transición suave del color de fondo */
 }
 
@@ -128,11 +164,68 @@ footer {
     background-color: #e2e2e2; /* Cambio de color al pasar el mouse */
 }
 
+/* Estilo adicional para el botón "Ver Artículo" en index.html */
+.news-link {
+    display: block;
+    text-decoration: none;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-top: 20px;
+    transition: background-color 0.3s;
+}
 
+.news-link:hover {
+    background-color: #ff5f6d;
+}
 
+/* Estilo adicional para el botón "Ver Artículo" en noticies.html */
+.news-detail-link {
+    display: inline-block;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #ff4655;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-top: 20px;
+    transition: background-color 0.3s;
+}
 
+.news-detail-link:hover {
+    background-color: #ff5f6d;
+}
 
+/* Estilo adicional para la presentación de noticias detalladas en noticies.html */
+.news-detail {
+    background-color: #1f2326;
+    color: #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
 
+.news-detail h2 {
+    color: #ff4655;
+    margin-bottom: 10px;
+}
 
+.news-detail p {
+    margin-bottom: 10px;
+}
 
+#hero {
+    background-image: url('https://i.pinimg.com/originals/f2/38/e8/f238e8b339824587f493aca2d765a6ba.gif');
+    background-size: cover;
+    padding: 200px 20px;
+    text-align: center;
+    background-color: transparent; /* Fondo transparente */
+}
 
+#hero h1 {
+    font-family: 'Impact', sans-serif; /* Cambia la tipografía a una más impactante */
+    font-size: 60px; /* Aumenta el tamaño de la letra */
+    color: #ff4654; /* Cambia el color a rojo para mayor visibilidad */
+    text-shadow: 2px 2px 4px #000000; /* Agrega sombra al texto para mejorar la legibilidad sobre el fondo dinámico */
+}
