--- a/Styles.css
+++ b/Styles.css
@@ -52,17 +52,23 @@ nav ul li a:hover, nav ul li a:focus {
     box-shadow: 0 2px 10px rgba(255,70,85,0.5);
 }
 
+nav ul li a:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(255,99,71,0.5); /* Contorno visible para foco de teclado */
+}
+
 #hero {
     background-image: url('https://i.pinimg.com/originals/f2/38/e8/f238e8b339824587f493aca2d765a6ba.gif');
     background-size: cover;
     padding: 200px 20px;
     text-align: center;
 }
+
 #hero h1 {
-    font-family: 'Impact', sans-serif; /* Canvia la tipografia a una més impactant */
-    font-size: 60px; /* Augmenta la grandària de la lletra */
-    color: #ff4654; /* Canvia el color a vermell per a més visibilitat */
-    text-shadow: 2px 2px 4px #000000; /* Afegeix ombra al text per a millorar la legibilitat sobre el fons dinàmic */
+    font-family: 'Impact', sans-serif; /* Cambia la tipografía a una más impactante */
+    font-size: 60px; /* Aumenta la tamaño de la letra */
+    color: #ff4654; /* Cambia el color a rojo para más visibilidad */
+    text-shadow: 2px 2px 4px #000000; /* Añade sombra al texto para mejorar la legibilidad sobre el fondo dinámico */
 }
 
 #latest-news h2 {
@@ -127,12 +133,41 @@ footer {
 .news-link:hover {
     background-color: #e2e2e2; /* Cambio de color al pasar el mouse */
 }
+/* Estils Específics per a la Pàgina Sobre Nosaltres */
+#team h2 {
+    font-family: 'Arial', sans-serif;
+    font-size: 2.2em; /* Mida més gran per als noms */
+    color: #ff6347; /* Color distintiu */
+    text-transform: uppercase; /* Text en majúscules per a més impacte */
+    margin-top: 20px;
+    text-shadow: 1px 1px 2px black; /* Ombra lleugera per millorar la llegibilitat */
+}
 
+#team p {
+    font-size: 1.2em; /* Mida més gran per al text descriptiu */
+    color: #ffffff; /* Text blanc per contrast */
+    margin-top: 10px;
+    padding: 0 20px; /* Padding per a una millor fluïdesa del text */
+}
 
+/* Millora visual per als articles de l'equip */
+article {
+    background-color: #1f2326; /* Fons fosc per a contrast amb el text */
+    border-left: 5px solid #ff6347; /* Vora lateral per destacar */
+    padding: 20px;
+    margin-bottom: 30px; /* Més espai entre articles */
+    transition: transform 0.3s ease-in-out; /* Transició suau per a efectes hover */
+}
 
+article:hover {
+    transform: translateY(-10px); /* Elevar l'article al passar el ratolí */
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2); /* Ombra més definida en hover */
+}
 
-
-
-
-
-
+/* Estil del títol principal de la pàgina */
+main h1 {
+    font-size: 3em; /* Mida molt gran per al títol principal */
+    color: #ff4655; /* Color cridaner per al títol */
+    text-shadow: 2px 2px 4px #000; /* Ombra per destacar el títol sobre qualsevol fons */
+    margin-bottom: 30px; /* Espai després del títol */
+}
