--- a/contact.css
+++ b/contact.css
@@ -57,6 +57,22 @@
 #contact-form input[type="submit"]:hover {
     background-color: #0056b3; /* Canvia el color de fons en passar sobre el botó */
 }
+footer {
+    text-align: center; /* Centra el contenido del footer */
+    padding: 20px 0;
+    background-color: #0a0a4f; /* Azul oscuro */
+    color: #fff;
+    width: 100%;
+    border-top: 2px solid #ff4655;
+}
+
+footer p {
+    margin: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
 
 /* Media Queries for Responsive Form */
 @media (max-width: 768px) {
